# xecuahuy

./: README.md
xecuahuy/: CMakeLists.txt  package.xml
xecuahuy/config/: controllers.yaml  joint_names_xecuahuy.yaml
xecuahuy/launch/: display.launch  display.launch.py  full_system.launch.py  gazebo.launch  gazebo.launch.py
xecuahuy/meshes/: base_link.STL  camera_link.STL  left_link.STL  lidar_link.STL  noi_link.STL  prismatic_link.STL  right_link.STL  rotary_link.STL
xecuahuy/rviz/: config.rviz
xecuahuy/scripts/: balancing_node.py  teleop_node.py
xecuahuy/urdf/: xecuahuy.csv  xecuahuy.urdf
